--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,11 @@
 
   <div class="container">
 
-    <% if signed_in? %>
-    <%= render 'layouts/navbar' %><% end %>
+      <% if signed_in? %>
+          <%= render 'layouts/navbar' %>
+      <% end %>
+
+
     <% # the flash message; it supports different type of communications %>
     <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
