--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
   <div class="container">
 
       <% if signed_in? %>
-          <%= render 'layouts/navbar' %>
+          <%# render 'layouts/navbar' %>
+        <%= render 'layouts/sidebar' %>
       <% end %>
 
 
