--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,7 +27,7 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  background-position: -60px 590px;
+  background-position: -80px 590px;
   background-attachment: fixed;
 
 
@@ -40,6 +40,8 @@ body {
 
 
 }
+
+
 
 section {
   overflow: auto;
@@ -328,11 +330,14 @@ input {
 
 
   position:fixed;
-  left:130px;
+  left:80px;
   top:100px;
-  width:150px;
+  width:160px;
+  background-color: white;
+  border-color: white;
 }
 
 .row-fluid > .span-fixed-sidebar {
   margin-left: 290px;
 }
+
