--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,11 +9,11 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
-        <%= render 'shared/stats' %>
+        <%# render 'shared/stats' %>
       </section>
     </aside>
     <div class="span8">
-      <%= render 'shared/post_form' %>
+      <%# render 'shared/post_form' %>
       <h3>Wall</h3>
       <%= render 'shared/feed' %>
     </div>
