--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -4,6 +4,6 @@
 </a>
 
 <% # current user name, link to her profile and her posts number %>
-<h1><%= current_user.name %></h1>
-<span><%= link_to 'Visita il mio profilo', current_user %></span>
+<h1><%=link_to current_user.name, current_user %></h1>
+
 <span><%= pluralize(current_user.posts.count, 'post') %></span>
