--- a/app/views/users/messages.html.erb
+++ b/app/views/users/messages.html.erb
@@ -1,7 +1,7 @@
 <% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
 <% provide :title, 'Messages' %>
 
-<h1>Received messages</h1>
+<h1>Messaggi ricevuti</h1>
 
 <%= will_paginate @messages %>
 
