--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -10,6 +10,7 @@
             <%=link_to image_tag("f_menu.png"), root_path%>
             <%=link_to image_tag("f_follow.png"), followers_user_path(current_user)%>
             <%=link_to image_tag("f_profilo.png"), current_user%>
+            <%=link_to image_tag("f_posta.png"), messages_user_path(current_user)%>
             <%=link_to image_tag("f_faq.png"), faq_path%>
 
 
