--- a/app/views/recipes/home.html.erb
+++ b/app/views/recipes/home.html.erb
@@ -5,7 +5,9 @@
   <div class="row-fluid">
     <div class="span6"><h3>Ricettario</h3>
       <%= link_to cookbook_path do %> <%= t(:"Vai al tuo ricettario").html_safe %>
-      <% end %> </div>
+      <% end %>
+    </div>
+
     <div class="span6"><h3>Ricerca ricetta</h3>
 
       <div class="row-fluid">
@@ -21,21 +23,24 @@
 
 
     <div class="row-fluid">
-      <div class="span12"><h3>Ricette consigliate</h3>
+      <div class="span6"><h3>Ricette consigliate</h3> </div>
 
-
-        <div id="recipes">
-          <%= render @recipes %>
-        </div>
-      </div>
-
-      <div class="row-fluid">
-        <div class="span12"><h3>Ricette del giorno</h3></div>
-
-
-      </div>
+      <div class="span6"><h3>Ricette del giorno</h3></div>
 
     </div>
+
+    <div class="row-fluid">
+        <div class="span12"><h3>Ricette recenti</h3></div>
+
+           <div id="recipes">
+            <%= render @recipes %>
+           </div>
+          <% # since we are in a Users view, we need to specify that the pagination is for the posts %>
+
+
+    </div>
+
+
   </div>
 </div>
 
