--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       </h1>
     </section>
     <section>
-      <%= render 'shared/stats' %>
+      <%# render 'shared/stats' %>
     </section>
     <% if current_user.following?(@user) %>
       <section>
@@ -21,14 +21,14 @@
   </aside>
 
   <div class="span8">
-    <%= render 'follow_form' if signed_in? %>
-    <% if @user.posts.any? %>
-      <h3>Posts (<%= @user.posts.count %>)</h3>
-      <ol class="posts">
-        <%= render @posts %>
+    <%# render 'follow_form' if signed_in? %>
+    <% if @user.recipes.any? %>
+      <h3>Ricette (<%= @user.recipes.count %>)</h3>
+      <ol class="recipes">
+        <%= render @recipes %>
       </ol>
       <% # since we are in a Users view, we need to specify that the pagination is for the posts %>
-      <% will_paginate @posts %>
+      <% will_paginate @recipes %>
     <% end %>
   </div>
 
