--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -4,12 +4,12 @@
   <aside class="span4">
     <section>
       <%= gravatar_for @user %>
-      <h1><%= @user.name %></h1>
-      <span><%= link_to 'View my profile', @user %></span>
+      <h1><%=link_to @user.name, @user %></h1>
+
       <span><b>Posts:</b> <%= @user.posts.count %></span>
     </section>
     <section>
-      <%= render 'shared/stats' %>
+      <%# render 'shared/stats' %>
       <% if @users.any? %>
           <div class="user_avatars">
             <% @users.each do |user| %>
