--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   <%= render 'layouts/shim'%>
 
 </head>
+<% if signed_in? %>
 <%= render 'layouts/sidebar' %>
+<% end %>
+
 <body>
 
   <% # partial for the header %>
@@ -37,6 +40,7 @@
     <% # show debug info if development is the actve Rails env %>
     <%= debug(params) if Rails.env.development? %><%#codice che mostra le informazioni di debug  se sono nel development     %>
   </div>
+
 
 </body>
 </html>
