--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   <div class="row">
     <aside class="span4">
       <section>
-        <%= render 'shared/user_info' %>
+        <%# render 'shared/user_info' %>
       </section>
       <section>
         <%# render 'shared/stats' %>
@@ -15,7 +15,7 @@
     <div class="span8">
       <%# render 'shared/post_form' %>
       <h3>Wall</h3>
-      <%= render 'shared/feed' %>
+      <%# render 'shared/feed' %>
     </div>
   </div>
 <% else %>
