--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,35 @@
 <% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
 <% provide :title, 'Registrazione' %>
+<html>
+<head>
+  <style type="text/css">
+      #div1 {width:350px;height:70px;padding:10px;border:1px solid #aaaaaa;}
 
+  </style>
+  <script type="text/javascript">
+
+      function allowDrop(ev)
+      {
+          ev.preventDefault();
+      }
+
+      function drag(ev)
+      {
+          ev.dataTransfer.setData("Text",ev.target.id);
+      }
+
+      function drop(ev)
+      {
+          ev.preventDefault();
+          var data=ev.dataTransfer.getData("Text");
+          ev.target.appendChild(document.getElementById(data));
+          document.getElementById("submit").disabled = false;
+
+      }
+
+  </script>
+</head>
+</body>
 <h1>Registrazione</h1>
 
 <div class="row">
@@ -8,7 +37,7 @@
     <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
-        <%= f.label :name, "Nome" %>
+        <%= f.label "Nome" %>
         <%= f.text_field :name %>
 
         <%= f.label :surname, "Cognome" %>
@@ -26,7 +55,18 @@
         <%= f.label :password_confirmation, 'Ripeti password' %>
         <%= f.password_field :password_confirmation %>
 
-        <%= f.submit 'Registrati', class: 'btn btn-large btn-primary' %>
+        <%= f.submit 'Registrati', id: 'submit', disabled: true, class: 'btn btn-large btn-primary' %>
+
     <% end %>
+
+    <p>Sposta l'immagine nel rettangolo per poterti registrare</p>
+
+    <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+
+    <br>
+    <img id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
+
+    </body>
   </div>
 </div>
+</html>
