--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,45 +2,45 @@
 <html>
 <head>
   <title><%= full_title(yield(:title)) %></title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <% # method to automatically prevent Cross-Site Request Forgery %>
+  <% # method to automatically prevent Cross-Site Request Forgery   %>
   <%= csrf_meta_tags %>
-  <% # partial for the HTML shim %>
-  <%= render 'layouts/shim'%>
+  <% # partial for the HTML shim   %>
+  <%= render 'layouts/shim' %>
 
 </head>
-<% if signed_in? %>
-<%= render 'layouts/sidebar' %>
-<% end %>
+
 
 <body>
 
-  <% # partial for the header %>
-  <%= render 'layouts/header' %>
+<% # partial for the header   %>
+<%= render 'layouts/header' %>
 
-  <div class="container">
+<div class="container-fluid">
+  <div class="row-fluid">
+    <% #contiene la sidebar  %>
 
       <% if signed_in? %>
-          <%# render 'layouts/navbar' %>
-
+          <%= render 'layouts/sidebar' %>
       <% end %>
 
+      <div class="span10">
+      <% # the flash message; it supports different type of communications   %>
+      <% flash.each do |key, value| %>
+          <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
 
-    <% # the flash message; it supports different type of communications %>
-    <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
-    <% end %>
+      <%= yield %>
 
-    <%= yield %>
-
-    <% # partial for the footer %>
+    <% # partial for the footer   %>
     <%= render 'layouts/footer' %>
 
-    <% # show debug info if development is the actve Rails env %>
+    <% # show debug info if development is the actve Rails env   %>
     <%= debug(params) if Rails.env.development? %><%#codice che mostra le informazioni di debug  se sono nel development     %>
+      </div>
   </div>
-
+</div>
 
 </body>
 </html>
