--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,15 +1,32 @@
 <%# partial per visualizzare elenco di ricette  %>
 
-<li>
-  <span class="content"><%= link_to recipe.name, recipe_path(recipe) %></span>
 
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(recipe.created_at) %> ago
-  </span>
-  <% if current_user?(recipe.user) %>
-      | <%= link_to 'cancella', recipe, method: :delete, data: {confirm: 'Sei sicuro?'}, title: recipe.name %>
-      | <%= link_to "modifica ricetta", edit_recipe_path(recipe.id) %>
-  <% end %>
+<ul class="thumbnails">
+<li class="span3">
+        <div class="thumbnail">
+          <%=link_to image_tag("piatto.png") %>
+          <div class="caption">
+            <%= link_to recipe.name, recipe_path(recipe) %>
+            <!--<p><span class="timestamp">-->
+                    <!--Posted <%= time_ago_in_words(recipe.created_at) %> ago-->
+                <!--</span></p>-->
+
+            <!--<% if current_user?(recipe.user) %>-->
+
+
+            <!--<% end %>-->
+          </div>
+        </div>
+      </li>
+    </ul>
+
+
+
+
+
+
+
+
 
 
 
