--- a/app/views/recipes/cookbook.html.erb
+++ b/app/views/recipes/cookbook.html.erb
@@ -2,9 +2,13 @@
 <% provide :title, 'Ricettario' %>
 
 <h1>Ricettario</h1>
-<p>
+
+<div class="container-fluid">
+  <div class="row-fluid">
   <%= render @recipes %>
-</p>
+
 
 <%= link_to new_recipe_path do %> <%= t(:"Crea una nuova ricetta").html_safe %>
-<% end %> </li>
+<% end %>
+</div>
+</div>
