--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Modifica la tua ricetta</h1>
 
-<div class="row">
+<div class="row-fluid">
   <div class="span6 offset3">
 
     <%= form_for @recipe  do |f|  %>
