--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,28 +2,36 @@
 <% provide :title, @recipe.name %>
 
 <div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span12">
-            <h1>Visualizzazione ricetta </h1>
-        </div>
-    </div>
   <div class="row-fluid">
-    <div class="span6 offset3">
+    <div class="span12">
+      <h1>Visualizzazione ricetta </h1>
 
-    <tr>
-
-      <td>Nome ricetta: <%= @recipe.name %></td>
-      <td>Tipo di piatto: <%=  @recipe.piatto%></td>
-      <td>Tipo di cucina: <%= @recipe.cucina %></td>
-      <td>Vegana: <%= check_box_tag 'user', 'is_admin', @recipe.vegana, :disabled => true %> </td>
-      <td>Vegetariana: <%= check_box_tag 'user', 'is_admin', @recipe.vegetariana, :disabled => true %> </td>
-      <td>Glutine: <%= check_box_tag 'user', 'is_admin', @recipe.glutine, :disabled => true %> </td>
-      <td>Latticini: <%= check_box_tag 'user', 'is_admin', @recipe.latticini, :disabled => true %> </td>
-      <td><%= @recipe.descrizione %></td>
-
-    </tr>
-      <%= link_to "modifica ricetta", edit_recipe_path(@recipe.id) %>
     </div>
   </div>
+  <div class="container">
+    <ul class="thumbnails">
+      <li class="span5">
+        <div class="thumbnail">
+            <%=link_to image_tag("piatto.png") %>
+          <div class="caption">
+            <h5><%= @recipe.name %></h5>
 
+            <td>Tipo di piatto: <%=  @recipe.piatto%></td>
+            <td>Tipo di cucina: <%= @recipe.cucina %></td>
+            <td>Vegana: <%= check_box_tag 'user', 'is_admin', @recipe.vegana, :disabled => true %> </td>
+            <td>Vegetariana: <%= check_box_tag 'user', 'is_admin', @recipe.vegetariana, :disabled => true %> </td>
+            <td>Glutine: <%= check_box_tag 'user', 'is_admin', @recipe.glutine, :disabled => true %> </td>
+            <td>Latticini: <%= check_box_tag 'user', 'is_admin', @recipe.latticini, :disabled => true %> </td>
+            <td><%= @recipe.descrizione %></td>
+            <p><a href="#" class="btn btn-success">Buy</a> <a href="#" class="btn btn-warning">Try</a></p>
+            <p><%= link_to 'cancella', @recipe, method: :delete, data: {confirm: 'Sei sicuro?'}, title: @recipe %>
+            <%= link_to "modifica", edit_recipe_path(@recipe) %></p>
+          </div>
+
+        </div>
+      </li>
+
+  </ul>
+
+</div>
 </div>
