--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,19 +23,20 @@ body {
   padding-top: 85px;
 
   background: url('piatto.png');
-  background-size:500px, 600px;
+  background-size:450px, 550px;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  background-position: -100px 590px;
+  background-position: -100px 630px;
   background-attachment: fixed;
   background-color: #ffe6a2;
 
   a{
-    color: #c51603;
+    color: #e24f06;
   }
   a:hover{
-    color: #ff4a08;
+    color: #670200;
+    text-decoration: none;
   }
 
 
@@ -399,7 +400,7 @@ input {
  // background-color: blue;
   text-align: center;
   padding-top: 3%;
-  padding-left: 5%;
+
 
 }
 
@@ -436,15 +437,32 @@ input {
 
 
 }
-
-.thumbnail{
- max-width: 100%;
-  margin: 0px auto;
+.thumbnail {
+  max-width: 100%;
+   margin: 0px, auto;
   text-align: center;
+  //background-color: yellow;
+  border-color:#ffe6a2 ;
+
+
+}
+
+.thumbnail p{
+
+height: 50px;
+  overflow: hidden;
 }
 
 .thumbnails{
   display: inline;
+
 }
+
+.menu{
+  float:left;
+}
+
+
+
 
 
