--- a/app/views/recipes/cookbook.html.erb
+++ b/app/views/recipes/cookbook.html.erb
@@ -1,14 +1,25 @@
 <% #Provide the page title in a symbol to application.html.erb to avoid duplication  %>
 <% provide :title, 'Ricettario' %>
 
-<h1>Ricettario</h1>
-
 <div class="container-fluid">
+<div class="row-fluid">
+  <div class="span9">
+<h1>Il mio ricettario</h1>
+  </div>
+
+  <div class="span3">
+    <p></p>
+    <%= link_to 'Crea una nuova ricetta',new_recipe_path,  class: 'btn btn-warning' %>
+
+  </div>
+
+
+</div>
+
   <div class="row-fluid">
   <%= render @recipes %>
 
 
-<%= link_to new_recipe_path do %> <%= t(:"Crea una nuova ricetta").html_safe %>
-<% end %>
+
 </div>
 </div>
