--- a/app/views/recipes/home.html.erb
+++ b/app/views/recipes/home.html.erb
@@ -22,18 +22,19 @@
       <div class="span9">
 
         <h3>Ricette consigliate</h3>
-
+        <div class="span3">
         <%= render @recipes_suggested%>
-
+        </div>
       </div>
     </div>
 
     <div class="row-fluid">
       <div class="span12">
+
         <h3>Ricette recenti</h3>
-
+        <div class="span3">
           <%= render  @recipes_all%>
-
+        </div>
       </div>
     </div>
 
