--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -2,7 +2,7 @@
 <% provide :title, 'Domande frequenti' %>
 
 <h1>Domande frequenti</h1>
-<p>Ok ora va</p>
+<p>CookBook è un social network di cucina e in questa pagina verranno inserite tutte le vostre domande</p>
 
 
 
