--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,8 @@
 <footer class="footer">
   <small>
-    <a href="http://github.com/polito-lam/SWorD" alt="SWorD on GitHub">FoodBook</a>
+    <%= link_to "CookBook", root_path%>
   </small>
   <nav>
-    <ul>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://bit.ly/lingambmult" alt="Linguaggi e Ambienti Multimediali">News</a></li>
-    </ul>
+
   </nav>
 </footer>
