--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,7 +4,7 @@
 
     <%=link_to image_tag("f_home.png"), root_path%>
     <%=link_to image_tag("f_ricette.png"), homerecipes_path%>
-    <%=link_to image_tag("f_menu.png"), root_path%>
+    <%=link_to image_tag("f_menu.png"), homemenu_path%>
     <%=link_to image_tag("f_follow.png"), followers_user_path(current_user)%>
     <%=link_to image_tag("f_profilo.png"), current_user%>
     <%=link_to image_tag("f_posta.png"), messages_user_path(current_user)%>
