--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,10 @@
       <% end %>
 
       <%= yield %>
-
+    <% if signed_in? %>
     <% # partial for the footer   %>
     <%= render 'layouts/footer' %>
-
+        <% end %>
     <% # show debug info if development is the actve Rails env   %>
     <%= debug(params) if Rails.env.development? %><%#codice che mostra le informazioni di debug  se sono nel development     %>
       </div>
