--- a/app/views/recipes/cookbook.html.erb
+++ b/app/views/recipes/cookbook.html.erb
@@ -8,8 +8,8 @@
   </div>
 
   <div class="span3">
-    <p></p>
-    <%= link_to 'Crea una nuova ricetta',new_recipe_path,  class: 'btn btn-warning' %>
+
+    <%= link_to 'Crea una nuova ricetta',new_recipe_path,  class: 'btn btn-xxlarge btn-warning' %>
 
   </div>
 
@@ -17,6 +17,7 @@
 </div>
 
   <div class="row-fluid">
+
   <%= render @recipes %>
 
 
