--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,13 +1,15 @@
 <% provide :title, 'Ricerca avanzata' %>
 
-<h1>Ricerca avanzata </h1>
+<h1 class="h1center">Ricerca avanzata </h1>
 <!--Form per la ricerca avanzata delle ricette-->
+  <div class="row-fluid">
+  <div class="span4 offset4">
 
-<%= form_for @search do |f| %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
+    <%= form_for @search do |f| %>
+      <div class="field">
+         <%= f.label :name, "Nome ricetta" %>
+         <%= f.text_field :name %>
+    </div>
 
     <div class="field">
       <%= f.label :"Tipo di piatto" %>
@@ -20,22 +22,21 @@
     </div>
 
     <div class="field">
+        <%= f.label :vegana %>
+        <%= f.check_box :vegetariana %>
 
+        <%= f.label :vegetariana %>
+        <%= f.check_box :vegetariana %>
 
+        <%= f.label :latticini %>
+        <%= f.check_box :latticini %>
 
-    <%= f.label :vegana %>
-    <%= f.check_box :vegetariana %>
-
-      <%= f.label :vegetariana %>
-      <%= f.check_box :vegetariana %>
-
-    <%= f.label :latticini %>
-    <%= f.check_box :latticini %>
-
-    <%= f.label :glutine %>
-    <%= f.check_box :glutine %>
-
+        <%= f.label :glutine %>
+        <%= f.check_box :glutine %>
     </div>
 
-    <div class="actions"><%= f.submit "Search" %></div>
-<% end %>
+    <div class="actions"><%= f.submit "Search" ,class: 'btn btn-large btn-warning'%></div>
+    <% end %>
+
+</div>
+</div>
