--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Risultati trovati</h1>
 
-
+ <div class="container-fluid">
 <!--Pagina di visualizzazione di tutte le ricette cercate tramite ricerca avanzata-->
 <%= render @search.recipes %>
+ </div>
