--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,28 @@
-<% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication  %>
 <% provide :title, 'Registrazione' %>
 <html>
 <head>
   <style type="text/css">
-      #div1 {width:150px;height:150px;border:2px solid #0e1574;}
+      #div1 {
+          width: 150px;
+          height: 150px;
+          border: 2px solid #0e1574;
+      }
 
   </style>
   <script type="text/javascript">
 
-      function allowDrop(ev)
-      {
+      function allowDrop(ev) {
           ev.preventDefault();
       }
 
-      function drag(ev)
-      {
-          ev.dataTransfer.setData("Text",ev.target.id);
+      function drag(ev) {
+          ev.dataTransfer.setData("Text", ev.target.id);
       }
 
-      function drop(ev)
-      {
+      function drop(ev) {
           ev.preventDefault();
-          var data=ev.dataTransfer.getData("Text");
+          var data = ev.dataTransfer.getData("Text");
           ev.target.appendChild(document.getElementById(data));
           document.getElementById("submit").disabled = false;
 
@@ -59,17 +60,13 @@
 
     <p>Sposta l'immagine nel rettangolo per poterti registrare</p>
 
-      <div class="span5">
-        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-      </div>
-      <div class="span5">
-        <img id="drag1" src="http://www.clker.com/cliparts/Q/N/w/B/S/8/fork-and-knife-light-blue-hi.png"  draggable="true" ondragstart="drag(event)" width="150" height="150">
+    <div class="span5">
+      <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    </div>
+    <div class="span5">
+      <img id="drag1" src="http://www.clker.com/cliparts/Q/N/w/B/S/8/fork-and-knife-light-blue-hi.png" draggable="true" ondragstart="drag(event)" width="150" height="150">
 
-      </div>
-
-
-
-
+    </div>
 
 
     </body>
