--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,12 +3,13 @@
     <div class="container">
       <nav>
         <ul class="nav pull-right">
-          <% #link_to is the Rails helper to create links (it generates <a...> tags) %>
+          <% #link_to is the Rails helper to create links (it generates <a...> tags)  %>
           <% if signed_in? %>
 
 
               <li id="fat-menu" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Benvenuto <%=current_user.name %> <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Benvenuto <%= current_user.name %>
+                  <b class="caret"></b></a>
                 <ul class="dropdown-menu">
 
                   <li><%= link_to "Profilo", current_user %></li>
@@ -18,7 +19,7 @@
                   <li><%= link_to "Esci", signout_path, method: "delete" %></li>
                 </ul>
               </li>
-                <% else %>
+          <% else %>
               <br>
           <% end %>
         </ul>
