--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,47 +1,50 @@
-<% #Provide the page title in a symbol to application.html.erb to avoid duplication  %>
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication    %>
 <% provide :title, @recipe.name %>
 
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span12">
-      <h1 class="h1center">Visualizzazione ricetta </h1>
+      <h1><%= @recipe.name %></h1>
 
     </div>
 
-  <div class="container">
-    <ul class="thumbnails">
-      <li class="span6 offset3">
-        <div class="thumbnail">
-            <%=link_to image_tag("piatto.png") %>
-          <div class="caption">
-            <h5><%= @recipe.name %></h5>
 
-            <td>Tipo di piatto: <%=  @recipe.piatto%></td>
-            <td>Tipo di cucina: <%= @recipe.cucina %></td>
-            <td>Vegana: <%= check_box_tag 'user', 'is_admin', @recipe.vegana, :disabled => true %> </td>
-            <td>Vegetariana: <%= check_box_tag 'user', 'is_admin', @recipe.vegetariana, :disabled => true %> </td>
-            <td>Glutine: <%= check_box_tag 'user', 'is_admin', @recipe.glutine, :disabled => true %> </td>
-            <td>Latticini: <%= check_box_tag 'user', 'is_admin', @recipe.latticini, :disabled => true %> </td>
-            <td><%= @recipe.descrizione %></td>
-
-
-
-            <% if current_user?(@recipe.user) %>
-
-                <%= link_to "modifica ricetta", edit_recipe_path(@recipe.id), class: 'btn btn-warning' %>
-                <%= link_to 'cancella', @recipe, method: :delete, data: {confirm: 'Sei sicuro?'}, title: @recipe, class: 'btn btn-warning' %>
-
-            <% else %>
-
-                <%= link_to "aggiungi al ricettario", recipe_add_path(@recipe.id),class: 'btn btn-warning' %>
-
-            <% end %>
-          </div>
-
+      <div class="row-fluid">
+        <div class="span6">
+            <%= link_to image_tag("salmone.jpg") %>
         </div>
-      </li>
 
-  </ul>
+        <div class="span6">
+           <br>   <br>    <br>
+              <p>
+              <td><b>Tipo di piatto:</b> <%= @recipe.piatto %></td> <br>
+              <td><b>Tipo di cucina:</b> <%= @recipe.cucina %></td> <br>
+              <td><b>Vegana:</b> <%= check_box_tag 'user', 'is_admin', @recipe.vegana, :disabled => true %> </td> <br>
+              <td><b>Vegetariana:</b> <%= check_box_tag 'user', 'is_admin', @recipe.vegetariana, :disabled => true %> </td>  <br>
+              <td><b>Glutine:</b> <%= check_box_tag 'user', 'is_admin', @recipe.glutine, :disabled => true %> </td> <br>
+              <td><b>Latticini:</b> <%= check_box_tag 'user', 'is_admin', @recipe.latticini, :disabled => true %> </td>  <br>
+              <td><b>Ingredienti:</b> <br>
+                <% i=0
+                 while i<@ingredient.size %>
+                    <li><%= @ingredient[i].ingrediente %>
+                    <td><%= @ingredient[i].quantit %></td>
+                    <td><%= @ingredient[i].tipoquantit %></td> </li><br>
+                 <% i+=1
+                    end%></td>
+              <td><b>Descrizione:</b> <%= @recipe.descrizione %></td> <br>
+              </p>
+
+              <% if current_user?(@recipe.user) %>
+
+                  <%= link_to "Modifica ricetta", edit_recipe_path(@recipe.id), class: 'btn btn-warning' %>
+                  <%= link_to 'Cancella', @recipe, method: :delete, data: {confirm: 'Sei sicuro?'}, title: @recipe, class: 'btn btn-warning' %>
+
+              <% else %>
+
+                  <%= link_to "Aggiungi al ricettario", recipe_add_path(@recipe.id), class: 'btn btn-warning' %>
+
+              <% end %>
+        </div>
+      </div>
   </div>
-</div>
 </div>
