--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,9 @@
-<% # gestisce e mostra gli errori del form %>
+<% # gestisce e mostra gli errori del form  %>
 <% if object.errors.any? %>
     <div id="error_explanation">
       <div class="alert alert-error">
-        The form contains <%= pluralize(object.errors.count, 'error') %>. <%# se c'è un solo errore lo mette al singolare altrimenti mette la parola errore al plurale%>
+        The form contains <%= pluralize(object.errors.count, 'error') %>
+        . <%# se c'è un solo errore lo mette al singolare altrimenti mette la parola errore al plurale%>
       </div>
       <ul>
         <% object.errors.full_messages.each do |message| %>
