--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication  %>
 <% provide :title, 'Modifica profilo' %>
 
 <h1>Modifica il tuo profilo</h1>
@@ -24,6 +24,7 @@
     <% end %>
 
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">Cambia immagine del profilo</a>  <%# permette di cambiare l'immagine del profilo con gravatar %>
+    <a href="http://gravatar.com/emails">Cambia immagine del
+      profilo</a>  <%# permette di cambiare l'immagine del profilo con gravatar %>
   </div>
 </div>
