--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% #Provide the page title in a symbol to application.html.erb to avoid duplication %>
+<% #Provide the page title in a symbol to application.html.erb to avoid duplication  %>
 <% provide :title, @user.name %>
 
 <div class="row-fluid">
@@ -6,37 +6,37 @@
     <section>
       <h3>
         <div class="row-fluid">
-        <%=link_to @user.name %> <hr>
+          <%=  @user.name %>
+          <hr>
         </div>
         <div class="row-fluid">
 
-        <%= gravatar_for(@user, size:300) %>
+          <%= gravatar_for(@user, size: 300) %>
         </div>
       </h3>
     </section>
 
-      <%# render 'shared/stats' %>
+    <%# render 'shared/stats' %>
     </section>
     <% if current_user.following?(@user) %>
-      <section>
-        <%= link_to 'New message', new_message_path(user: @user.id), role: 'button', class: 'btn btn-info', remote: true %>
-        <div class="message"></div>
-      </section>
+        <section>
+          <%= link_to 'New message', new_message_path(user: @user.id), role: 'button', class: 'btn btn-info', remote: true %>
+          <div class="message"></div>
+        </section>
     <% end %>
   </aside>
 
   <div class="span9">
     <%# render 'follow_form' if signed_in? %>
     <% if @user.recipes.any? %>
-      <h3>Le mie ricette (<%= @user.recipes.count %>)</h3>
-      <ol class="recipes">
-        <%= render @recipes %>
-      </ol>
-      <% # since we are in a Users view, we need to specify that the pagination is for the posts %>
-      <% will_paginate @recipes %>
+        <h3>Le mie ricette (<%= @user.recipes.count %>)</h3>
+        <ol class="recipes">
+          <%= render @recipes %>
+        </ol>
+        <% # since we are in a Users view, we need to specify that the pagination is for the posts  %>
+        <% will_paginate @recipes %>
     <% end %>
   </div>
-
 
 
 </div>
