--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, @title) %>
-
-<div class="row">
+<div class="container-fluid">
+<div class="row-fluid">
   <aside class="span4">
     <section>
-      <%= gravatar_for @user %>
-      <h1><%=link_to @user.name, @user %></h1>
+      <%=link_to gravatar_for(@user) , @user%>
+      <h1><%= link_to @user.name, @user %></h1>
 
 
     </section>
@@ -13,14 +13,14 @@
       <% if @users.any? %>
           <div class="user_avatars">
             <% @users.each do |user| %>
-                <%= link_to gravatar_for(user, size: 30), user %>
+                <%= link_to gravatar_for(user, size: 50), user %>
             <% end %>
           </div>
       <% end %>
     </section>
   </aside>
   <div class="span8">
-    <h3><%= @title %></h3>
+    <h3><%= "Cuochi followers" %></h3>
     <% if @users.any? %>
         <ul class="users">
           <%= render @users %>
@@ -28,4 +28,5 @@
         <%= will_paginate %>
     <% end %>
   </div>
+</div>
 </div>
