--- a/app/views/recipes/_ingredients_form.html.erb
+++ b/app/views/recipes/_ingredients_form.html.erb
@@ -1,3 +1,4 @@
+<%# form per inserire gli ingredienti quando si aggiunge una nuova ricetta in recipes/new%>
 <p>
   <%= f.label :ingrediente %>
   <%= f.text_field :ingrediente %>
