--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,4 +1,4 @@
-<%# partial per visualizzare elenco di ricette  %>
+<%# partial per visualizzare elenco di ricette attraverso thumbnails %>
 
 <ul class="thumbnails">
   <li class="span4 clearfix">
@@ -6,11 +6,9 @@
       <%= link_to image_tag("pasta2.jpg"), recipe_path(recipe) %>
 
       <div class="caption" class="pull-left">
-
         <h4>
-          <%= link_to recipe.name, recipe_path(recipe) %> </p>
+          <%= link_to recipe.name, recipe_path(recipe) %>
         </h4>
-
       </div>
     </div>
   </li>
