--- a/app/views/recipes/home.html.erb
+++ b/app/views/recipes/home.html.erb
@@ -21,8 +21,8 @@
     </div>
 
     <div class="span3">
-
-      <h3>Ricetta del giorno</h3>
+      <%#visualizza una ricetta consigliata in base agli ingredienti %>
+      <h3>Ricetta consigliata</h3>
       <%= link_to image_tag("antipasto.jpg"), recipe_path(@advice) %>
       <h4>
         <%= link_to @advice.name, recipe_path(@advice) %> </p>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="span4 offset1">
-
+      <%#Visualizza un cuoco consigliato%>
       <h3>Cuoco consigliato</h3>
 
       <div class="row-fluid">
